--- a/main.css
+++ b/main.css
@@ -20,8 +20,8 @@ a {
     margin: 100px;
 
     /* Maximum width and height*/
-    max-width: 1000px;
-    max-height: 1000px;
+    max-width: 90%;
+    max-height: 90%;
 
     /* Borders */
     border-style: solid;
@@ -41,13 +41,6 @@ a {
 /* Titles */
 .title {
     line-height: 0.25em;
-}
-
-/* Image attributes */
-.image {
-    width: 10%;
-    width: 10%;
-    float: left;
 }
 
 /* Container content */
