--- a/main.css
+++ b/main.css
@@ -1,11 +1,17 @@
 /* Default document attributes */
 body {
+    /* Disable user text selection */
     user-select: none;
     -moz-user-select: none;
 
+    /* Fonts */
     font-family: Arial, Helvetica, sans-serif;
 
-    background-color: #ffffff
+    /* Background */
+    background-color: #ffffff;
+    background-image: url(./images/mountain.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /* Custom hyperlinks */
@@ -34,8 +40,11 @@ a {
     color: #919191;
 
     /* Box shadow */
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: 10px 15px 15px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 10px 15px 15px rgba(0, 0, 0, 0.35);
+    box-shadow: 10px 15px 15px rgba(0, 0, 0, 0.35);
+
+    /* Background color */
+    background-color: #ffffff;
 }
 
 /* Titles */
@@ -61,9 +70,22 @@ a {
     /* Box shadow */
     -moz-box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.15);
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.15);
+
+    /* Background color */
+    background-color: #ffffff;
 }
 
 /* Navigator hover event */
 .navigation a:hover {
     color: black;
 }
+
+/* Image credit */
+.credit {
+    margin: 20px;
+    font-size: 15px;
+
+    position: fixed;
+    left: 0;
+    bottom: 0;
+};
