--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 
     /* Background */
-    background-color: #dddddd;
+    background-color: #0a55e0;
 }
 
 /* Custom hyperlinks */
